<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rent_icon"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_camera_alt_black_36dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp" android:orientation="vertical">
        <EditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint"
            android:ems="10"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <EditText
            android:id="@+id/rent_expected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rent_expected_hint"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <EditText
            android:id="@+id/pickup_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:ems="10"
            android:layout_weight="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
        <Button
            android:id="@+id/rent_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:paddingTop="4dp"
            />
        <Button
            android:id="@+id/rent_cancel_btn"
            android:paddingTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="Cancel"
            />

    </LinearLayout>
</LinearLayout>