<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mendonca.rentall.SignUp"
    android:orientation="vertical">

    <LinearLayout android:layout_width="376dp"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText android:id="@+id/sUserName"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signup_hint"/>

    </LinearLayout>
    <LinearLayout android:layout_width="376dp"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText android:id="@+id/sEmail"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signup_email_hint"/>

    </LinearLayout>
    <LinearLayout android:layout_width="376dp"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
    <EditText
            android:id="@+id/sPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pwdhint"
            android:ems="10"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout android:layout_width="376dp"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
        <EditText
                android:id="@+id/cfpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/cfpwdhint"
                android:ems="10"
                android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <Button
                android:id="@+id/create_user"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/signup"
            android:onClick="CreateUser"
            />

    </LinearLayout>


</LinearLayout>
