<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mendonca.rentall.ProfileEditActivity">

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:id="@+id/editprofile">
       <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_camera_alt_black_36dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="UpdatePic"/>
        <EditText
            android:id="@+id/eName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/eEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/email_hint"
            android:ems="10" />
        <EditText
            android:id="@+id/eAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/addr_hint"
            android:ems="10" />
        <Button
            android:id="@+id/saveNote"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save_button" />
    </LinearLayout>

</RelativeLayout>
